# Healthcare-Knowledge-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml
docs/: CICD_SETUP.md
src/: __main__.py  app.py
src/rag/: __init__.py  llm.py  main.py  translator.py
src/routers/: generate.py  ingest.py  retrieve.py
