[project]
name = "healthcare-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deep-translator>=1.11.4",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.4",
    "langdetect>=1.0.9",
    "openai>=2.7.1",
    "protobuf==3.20.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
